--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ cache:
   directories:
     - ~/.npm
 node_js:
-- "15.14"
+  - '12'
 git:
   depth: 3
-script: 
+script:
   - yarn build
-deploy:
-  provide: page
-  edge: true,
+deploy: 
+  provider: pages
+  edge: true
   skip-cleanup: true
   keep-history: true
   github-token: $GITHUB_TOKEN
-  local-dir: dist
+  local-dir: dist/
   target-branch: gh-pages
   commit_message: "Deploy Release"
   on:
